Updated project file for Production Test

--- a/data/project.json
+++ b/data/project.json
@@ -60,6 +60,8 @@
       ]
     },
     "created_at": "2024-11-21T13:59:00.828Z",
-    "updated_at": "2024-11-21T14:09:25.170Z"
-  }
+    "updated_at": "2024-11-21T14:11:28.945Z",
+    "generate_pages_site": true
+  },
+  "is_private": false
 }
