--- a/data/project.json
+++ b/data/project.json
@@ -1,6 +1,6 @@
 {
   "publish": {
-    "publish_pages_app": false,
+    "publish_pages_app": true,
     "publish_sha": "",
     "publish_iso_date": ""
   },
@@ -60,8 +60,8 @@
       ]
     },
     "created_at": "2024-11-21T13:59:00.828Z",
-    "updated_at": "2025-03-11T19:14:56.407Z",
-    "generate_pages_site": false
+    "updated_at": "2025-03-11T19:39:05.041Z",
+    "generate_pages_site": true
   },
   "is_private": false
 }
